# Minimal-AE-Plugin-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Template.cpp
